# lloydflanagan_ai

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  PROMPTS.md  README.md  fly.toml  main.py  pyproject.toml
src/lloydflanagan/: app.py
static/js/: site-header.js
templates/: about.html  base.html  blog.html  design.html  education.html  index.html  prompts.html
